--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 1rc2 - released 2013-03-20
+cmb     fixed bug, where the text blocks couldn't be saved on Windows under PHP < 5.3.0 (reported by svasti)
+
 Version 1rc1 - released 2013-03-18
 cmb     changed extensions of data files to .htm
 cmb     updated English manual and added German manual
@@ -5,7 +8,7 @@ cmb     added German localization
 cmb     added Russian and Slovak localization (contributed by Old resp. Tata)
 cmb     improved admin interface
 cmb     refactored and cleaned up code
-cmb     implemented RPG pattern
+cmb     implemented PRG pattern
 
 Version 1beta1 - released 2012-05-10
 cmb	initial release
