fixed for build target

--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
+* reformat CHANGELOG
 * bump copyright year
 * augment mkdir() with chmod()
 * add XH 1.6 APIs
 * check result of opendir()
 * replace !! with (bool)
 * fix BOILERPLATE_URL
+* update .htaccess for Apache 2.4
+* add views to sources
 
+* move boilerplates to content folder (keeping config option?)
 * add subfolders (sugg. by Old)
