--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 1.0 - released 2015-03-04
+* no relevant changes
+
 Version 1rc3 - released 2014-09-28
 * fixed language texts and manuals regarding allowed characters for text block
   names (reported by Lariss)
